<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/pomodoroLabel"
        android:layout_width="213dp"
        android:layout_height="64dp"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/pomodoroLabel"
        android:textSize="42sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/studyTimerLabel"
        android:layout_width="187dp"
        android:layout_height="50dp"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/studyTimeLabel"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pomodoroLabel" />

    <TextView
        android:id="@+id/breakTimeLabel"
        android:layout_width="190dp"
        android:layout_height="56dp"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/breakTimeLabel"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studySeekBar" />

    <SeekBar
        android:id="@+id/studySeekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="188dp"
        android:layout_height="59dp"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="24dp"
        android:max="60"
        android:progress="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studyTimerTextView" />

    <SeekBar
        android:id="@+id/breakSeekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="192dp"
        android:layout_height="57dp"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="19dp"
        android:max="20"
        android:progress="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breakTimerTextView" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="190dp"
        android:layout_height="86dp"
        android:layout_marginStart="110dp"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="28dp"
        android:text="@string/startButtonText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breakSeekBar" />

    <TextView
        android:id="@+id/studyTimerTextView"
        android:layout_width="183dp"
        android:layout_height="42dp"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/zeroMinutes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studyTimerLabel" />

    <TextView
        android:id="@+id/breakTimerTextView"
        android:layout_width="185dp"
        android:layout_height="45dp"
        android:layout_marginStart="109dp"
        android:layout_marginLeft="109dp"
        android:layout_marginTop="27dp"
        android:gravity="center"
        android:text="@string/zeroMinutes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breakTimeLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>